repaired extra padding

--- a/src/styles/signin.css
+++ b/src/styles/signin.css
@@ -57,8 +57,8 @@ button {
   color: white;
   border: none;
   border-radius: 6px;
-  font-size: 1.1rem;
-  font-weight: 600;
+  font-size: 0.8rem;
+  font-weight: 350;
   text-transform: uppercase;
   cursor: pointer;
   transition: background 0.3s ease, transform 0.3s ease;
